# mock_dependency_litestar

./: pyproject.toml
mock_dependency_litestar/: dependencies.py  main.py
tests/: test_deps.py
